Fix spacing for ic-item-full footer boxes

--- a/styles/last/pa_extras.css
+++ b/styles/last/pa_extras.css
@@ -2,7 +2,8 @@
 
 
 .ic-margin-bottom {
-	margin-bottom: 2rem;
+	margin-top: 0!important;
+	margin-bottom: 1rem;
 }
 
 
